--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   margin: 0 auto;
 }
 
-/*== header ==*/
+/* == header == */
 
 #cabecalho {
   position: fixed;
@@ -19,7 +19,7 @@ body {
 
 #banner {
   display: inline-block;
-  background-color: rgb(156, 255, 255);
+  background-color: rgb(156 , 255 , 255);
   border-radius: 0 0 30px 30px;
   width: 1366px;
   height: 180px;
@@ -28,24 +28,24 @@ body {
 }
 
 #titulo {
-  font-family: 'Arial Narrow', Arial, sans-serif;
+  font-family: "Arial Narrow", Arial, sans-serif;
   font-size: 3em;
   position: absolute;
   left: 5em;
-  top: 20px;  
+  top: 20px;
 }
 
 #minha_foto {
   width: 200px;
   border-radius: 50%;
-  border: rgb(156, 255, 255) solid 5px;
+  border: rgb(156 , 255 , 255) solid 5px;
   position: absolute;
   top: 1em;
   right: 5em;
 }
 
 #banner a {
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   font-size: 2em;
   display: inline-block;
   position: absolute;
@@ -53,15 +53,15 @@ body {
   bottom: 1em;
 }
 
-#banner a+a {
+#banner a + a {
   margin-left: 5em;
 }
 
-/*== Section lições ==*/
+/* == Section lições == */
 
-ol, ul,h3 {
+ol , ul , h3 {
   display: inline-block;
-  line-height: 28px;  
+  line-height: 28px;
 }
 
 li, h3 {
@@ -73,23 +73,23 @@ li, h3 {
   margin-bottom: 20px;
 }
 
-#licoes ol+ul {
+#licoes ol + ul {
   margin-left: 100px;
 }
 
 #licoes {
   padding-top: 210px;
-  text-align: center;  
+  text-align: center;
 }
 
-/*== Article e aside ==*/
+/* == Article e aside == */
 
 td {
   display: inline-block;
-  margin-left: 120px
+  margin-left: 120px;
 }
 
-article, aside {
+article , aside {
   width: 500px;
 }
 
@@ -98,24 +98,24 @@ article, aside {
 }
 
 .lado-direito {
-  border: rgb(156, 255, 255) solid 2px;
+  border: rgb(156 , 255 , 255) solid 2px;
   border-radius: 20px;
-  padding:50px 20px 45px 20px;
+  padding: 50px 20px 45px;
 }
 
 .lado-esquerdo {
-  border: rgb(156, 255, 255) solid 2px;
+  border: rgb(156 , 255 , 255) solid 2px;
   border-radius: 20px;
   padding: 20px;
 }
 
-/*== Footer ==*/
+/* == Footer == */
 
 footer {
   width: 1366px;
-  height: 20ppx;
-  background-color: rgb(156, 255, 255);
-  border-radius: 30px 30px 0 0 ;
+  height: 20px;
+  background-color: rgb(156 , 255 , 255);
+  border-radius: 30px 30px 0 0;
   padding: 15px;
   position: fixed;
   bottom: 0;
