--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
 }
 
 /* == header == */
-
 #cabecalho {
   position: fixed;
   display: block;
@@ -28,7 +27,7 @@ body {
 }
 
 #titulo {
-  font-family: "Arial Narrow", Arial, sans-serif;
+  font-family: 'Arial Narrow', Arial, sans-serif;
   font-size: 3em;
   position: absolute;
   left: 5em;
@@ -45,7 +44,7 @@ body {
 }
 
 #banner a {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   font-size: 2em;
   display: inline-block;
   position: absolute;
@@ -58,13 +57,12 @@ body {
 }
 
 /* == Section lições == */
-
 ol , ul , h3 {
   display: inline-block;
   line-height: 28px;
 }
 
-li, h3 {
+li , h3 {
   border-bottom: black solid 1px;
 }
 
@@ -83,7 +81,6 @@ li, h3 {
 }
 
 /* == Article e aside == */
-
 td {
   display: inline-block;
   margin-left: 120px;
@@ -110,10 +107,9 @@ article , aside {
 }
 
 /* == Footer == */
-
 footer {
   width: 1366px;
-  height: 20px;
+  height: 45px;
   background-color: rgb(156 , 255 , 255);
   border-radius: 30px 30px 0 0;
   padding: 15px;
