--- a/style.css
+++ b/style.css
@@ -1,34 +1,71 @@
 body {
-background-color : rgb(253 , 251 , 251);
-
-}
-
-#cabecalho {
-margin-top: 0px;
-background-color : rgb(201 , 123 , 50);
-height: 100px;
-line-height: 100px;
-position: relative;
-}
-
-#minha_foto {
-border-radius: 50%;
-float: left;
-
-}
-
-#titulo {
-text-align: center;
-color: rgb(253 , 251 , 251);
-}
-
-#licoes_a_aprender {
+  background-color : rgb(253 , 251 , 251);
+  
+  }
+  
+  h1 {
+  text-align: center;
+  color: white;
+  padding-left: 10px;
+  }
+  
+  #cabecalho {
+  position: fixed;
+  margin-top: 0px;
+  background-color : rgb(201, 136, 75);
+  height: 100px;
+  padding-left:70%;
+  
+  
+  }
+  
+  #minha_foto {
+  float: left; 
+  padding: 5px;
+  margin-top: 125px;
+  border-radius: 50%;
+  
+  }
+  
+  #titulo {
+  text-overflow: clip;
+  color: rgb(253 , 251 , 251);
+  }
+  
+  #licoes_a_aprender {
   float: left;
+  padding-right: 300px;
   padding: 10%;
-}
-
-#licoes_aprendidas {
+  }
+  
+  #licoes_aprendidas {
   float: right;
-  padding: 10%;
-
-}
+  padding: 25%;
+  padding-top: 10%;
+  
+  }
+  
+  h3 {
+    background-color:rgb(201, 136, 75);
+    line-height: 30px;
+    border-radius: 10px;
+    text-align: center;
+  }
+  
+  #text {
+    overflow : auto;
+    padding-left: 20%;
+    margin-right: 5%;
+    margin-bottom: 20%;
+    text-align: justify;
+    padding: 5%;
+    padding-top: 100px;
+    font-size: 18px;
+    line-height: 30px;
+  
+  }
+  
+  h2 {
+    text-align: center;
+  }
+  
