--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ footer {
   height: 140px;
   width: 100%;
   opacity: 0;
-  transition: .5s ease;
+  transition: 0.5s ease;
   border-radius: 5px;
   background-color: rgb(114 , 63 , 97);
 }
