--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ main {
   width: fit-content;
   padding-left: 20px;
   color: rgb(84 , 11 , 14);
-  margin: -20px 0 5px 0;
+  margin: -20px 0 5px;
   font-family: sans-serif;
 }
 
