--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ p {
 main {
   width: 60%;
   display: inline-block;
-  margin: 0 0 40px 0;
+  margin: 0 0 40px;
 }
 
 #left_side_screen {
@@ -25,7 +25,7 @@ main {
   height: 100%;
   width: 20%;
   display: inline-block;
-  margin: 100px 0 0 0;
+  margin: 100px 0 0;
   background-color: lawngreen;
 }
 
