--- a/style.css
+++ b/style.css
@@ -1,79 +1,63 @@
+* {
+  text-align: justify;
+  margin: 0;
+}
+
 body {
-  background-color : rgb(253 , 251 , 251);
+background-color : rgb(253 , 251 , 251);
+font-family: 'Mukta', sans-serif;
+}
+
+ #cabecalho {
+position: fixed;
+margin-top: 0px;
+background-color : rgb(201, 136, 75);
+height: 60px;
+line-height: 30px;
+padding-left: 1000px;
+text-align: center;
+}
+
+#titulo {
+font-family: 'Mukta', sans-serif;
+font-size: 25px;
+position:relative;
+}
+
+#minha_foto {
+border-radius: 50%;
+size: 100px;
+}
   
-  }
-  
-  h1 {
-  text-align: center;
-  color: white;
-  padding-left: 10px;
-  }
-  
-  #cabecalho {
-  position: fixed;
-  margin-top: 0px;
-  background-color : rgb(201, 136, 75);
-  height: 100px;
-  padding-left:70%;
-  
-  }
-  
-  #minha_foto {
-  float: left; 
-  padding: 5px;
-  margin-top: 125px;
-  border-radius: 50%;
-  
-  }
-  
-  #titulo {
-  text-overflow: clip;
-  color: rgb(253 , 251 , 251);
-  }
-  
+
   #licoes_a_aprender {
-  float: left;
-  padding-right: 20%;
-  padding: 15%;
-  padding-bottom: 60%;
+  
   }
   
   #licoes_aprendidas {
-  float: right;
-  padding: 30%;
-  padding-top: 10%;
-  
-  }
-  
-  h3 {
-  background-color:rgb(201, 136, 75);
-  line-height: 30px;
-  border-radius: 10px;
-  text-align: center;
-  }
-  
-  #text {
-  overflow: hidden;
-  padding-right: 40%;
-  margin-right: 5%;
-  margin-bottom: 20%;
-  text-align: justify;
-  padding-top: 100px;
-  font-size: 18px;
-  line-height: 30px;
   
   }
 
-  #side {
-  float: right;
-  margin-left: 5%;
-  margin-bottom: 20%;
-  font-size: 18px;
-  line-height: 30px;
-  display: inline;
+  h3{
+    background-color : rgb(201, 136, 75);
+
   }
-  
+
   h2 {
-  text-align: center;
+    font-size: 25px;
+    padding-top: 80px;
+    float: right;
   }
-  
+
+.lado-direito{
+  text-align: justify ;
+  margin-right: 10%;
+  margin-bottom: 5px;;
+  overflow : auto;
+}
+
+
+.lado-esquerdo {
+float: left;
+padding-top: 0%;
+  }
