--- a/style.css
+++ b/style.css
@@ -1,9 +1,33 @@
+body * {
+    border: 0;
+    margin: 0;
+}
+
 body{
     background-color: rgb(253, 251, 251);
+    margin: 0;
+    padding: 0;
 }
 
 #cabecalho {
+    width: 100%;
+    height: 130px;
     position: fixed;
     top: 0px;
+    z-index: 1;
+    background-color: rgb(183, 247, 175);
 }
 
+main {
+    position: relative;
+    top: 100px;
+}
+
+.icon {
+    height: 100px;
+    border-radius: 20%;
+}
+
+.icon:hover {
+    background-color: cornflowerblue;
+}
