--- a/style.css
+++ b/style.css
@@ -1,33 +1,41 @@
 body * {
-    border: 0;
-    margin: 0;
+  border: 0;
+  margin: 0;
 }
 
-body{
-    background-color: rgb(253, 251, 251);
-    margin: 0;
-    padding: 0;
+body {
+  background-color: rgb(253, 251, 251);
+  margin: 0;
+  padding: 0;
 }
 
 #cabecalho {
-    width: 100%;
-    height: 130px;
-    position: fixed;
-    top: 0px;
-    z-index: 1;
-    background-color: rgb(183, 247, 175);
+  width: 100%;
+  height: 130px;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  background-color: rgb(183, 247, 175);
+}
+
+#titulo {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 main {
-    position: relative;
-    top: 100px;
+  position: relative;
+  top: 100px;
+  height: 900px;
 }
 
 .icon {
-    height: 100px;
-    border-radius: 20%;
+  height: 100px;
 }
 
 .icon:hover {
-    background-color: cornflowerblue;
+  background-color: cornflowerblue;
+}
+
+#atribuicao {
+  font-size: 12px;
 }
