--- a/style.css
+++ b/style.css
@@ -6,20 +6,24 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 header {
-    background-color: green;
+    background-color: rgb(25,25,112);
     height: 13vh;
     position: fixed;
     top: 0px;
     width: 100vw;
 }
 #titulo {
-    background-color: green;
+    background-color: rgb(25,25,112);
+    color: white;
     margin: 2vh;
     margin-left: 43vw;
     width: 100vw;
 }
 nav {
-    background-color: green;
+    background-color: rgb(176,224,230);
+}
+span a {
+    background-color: rgb(176,224,230);
 }
 span {
     background-color: green;
@@ -39,48 +43,61 @@ span {
     display: inline-block;
     margin: 8vh 6vw 2vh 7vw;
     width: 45vw;
+    font-size: 20px;
 }
 li, tr {
    height: 32px;
-   width: 340px; 
+   width: 400px; 
+}
+.ap {
+    color: rgb(25,25,112);
 }
 .textos {
     display: block;
     width: 100vw;
-    margin-top: 50px;
+    margin-top: 35px;
+    line-height: 26px;
 }
 .lado-esquerdo {
     float: left;
-    height: 16vh;
+    height: 24vh;
     width: 45vw;
     margin-left: 2vw;
+    background-color: rgb(176,224,230);
+    padding: 10px;
 }
 .lado-direito {
-    height: 16vh;
+    background-color: rgb(176,224,230);
+    height: 20vh;
     margin-right: 2vw;
+    padding: 15px 10px 13px 10px;
     width: 45vw;
     float: right;
 }
+aside {
+    background-color: rgb(176,224,230);
+}
 #rodape {
     clear: both;
-    background-color: green;
+    background-color: rgb(25,25,112);
     height: 99px;
-    margin-top: 25px;
+    margin-top: 240px;
 }
-
-#icone {
+.icone {
+    background-color: rgb(25,25,112);
     clear: both;
-    background-color: green;
-    width: 50px;
-    height: 50px;
+    height: 45px;
+    width: 45px;
 }
-a {
-    background-color: green;
+footer a {
+    background-color: rgb(25,25,112);
+    position: relative;
+    top: 50px;
 }
 .sf {
-    position: relative;
+    background-color: rgb(25,25,112);
     bottom: -45px;
-}
-.ft {
-    width:80px;
+    color: white;
+    text-align: center;
+    position: relative;
 }
