--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 body {
@@ -50,10 +51,11 @@ body {
   position: absolute;
   left: 12em;
   bottom: 40px;
+  border-bottom: navy 2px solid;
 }
 
 #banner a + a {
-  margin-left: 5em;
+  margin-left: 4em;
 }
 
 /* == Section lições == */
@@ -67,8 +69,14 @@ li , h3 {
 }
 
 #titulo-aprendidas {
-  margin-right: 170px;
+  display: inline-block;
+  margin-right: 130px;
   margin-bottom: 20px;
+}
+
+#titulo-aprender {
+  display: inline-block;
+  margin-left: 20px;
 }
 
 #licoes ol + ul {
@@ -109,11 +117,12 @@ article , aside {
 /* == Footer == */
 footer {
   width: 1366px;
-  height: 45px;
+  height: 50px;
+  font-size: 15px;
   background-color: rgb(156 , 255 , 255);
   border-radius: 30px 30px 0 0;
-  padding: 15px;
+  padding: 10px;
   position: fixed;
   bottom: 0;
-  text-align: center;
+  text-align: center;  
 }
