--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@ blockquote , q {
   quotes: none;
 }
 
-blockquote:before , blockquote:after,
-q:before, q:after {
+blockquote:before , blockquote:after ,
+q:before , q:after {
   content: none;
 }
 
@@ -48,7 +48,7 @@ Fim do trecho para o "Zerar" o CSS defalt.
 
 body {
   background-color: rgb(253 , 251 , 251);
-  font-family: "PT Serif", serif;
+  font-family: 'PT Serif', serif;
   color: #363946;
   font-size: 18px;
   line-height: 1.2em;
@@ -95,7 +95,7 @@ nav a {
   float: left;
 }
 
-#modulos table, th, td {
+#modulos table , th , td {
   border: 1px solid black;
   text-align: center;
 }
@@ -104,7 +104,7 @@ nav a {
   margin: 20px auto;
 }
 
-#modulos th, td {
+#modulos th , td {
   padding: 20px;
 }
 
