--- a/style.css
+++ b/style.css
@@ -32,8 +32,8 @@ body {
 #titulo {
   font-style: italic;
   font-size: 3em;
-  font-family: 'Josefin sans', Arial, sans-serif;
-  color: rgb(30 , 72 , 82);  
+  font-family: 'Josefin Sans', sans-serif;
+  color: rgb(30 , 72 , 82);
   position: absolute;
   left: 5em;
   top: 35px;
