--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 #titulo {
   font-style: italic;
   font-size: 3em;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: rgb(30 , 72 , 82);
   position: absolute;
   left: 5em;
