Cores HEX substituidas para RBG

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ Fim do trecho para o "Zerar" o CSS defalt.
 body {
   background-color: rgb(253 , 251 , 251);
   font-family: 'PT Serif', serif;
-  color: #363946;
+  color: rgb(54 , 57 , 70);
   font-size: 18px;
   line-height: 1.2em;
 }
@@ -57,7 +57,7 @@ body {
 #cabecalho {
   top: 0px;
   left: 0px;
-  background-color: #f2dcc2;
+  background-color: rgb(242 , 220 , 194);
   width: 100%;
   text-align: center;
   height: 50px;
@@ -139,7 +139,7 @@ section h2 {
 
 #rodape {
   width: 100%;
-  background-color: #023c40;
+  background-color: rgb(2 , 60 , 64);
   color: white;
   line-height: 100px;
 }
