Serif para serif

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ Fim do trecho para o "Zerar" o CSS defalt.
 
 body {
   background-color: rgb(253 , 251 , 251);
-  font-family: PT Serif , Serif;
+  font-family: PT serif , serif;
   color: rgb(54 , 57 , 70);
   font-size: 18px;
   line-height: 1.2em;
