--- a/style.css
+++ b/style.css
@@ -5,4 +5,58 @@ body {
 #cabecalho {
   position: fixed;
   top: 0;
+  width: 100%;
+  height: 80px;
+  border: 1px solid;
+  background-color: rgb(42, 161, 116);
+}
+
+#minha_foto {
+  width: 200px;
+  margin: 100px 15px 15px;
+  padding: 15px;
+  border: 1px;
+}
+
+#licoes_aprendidas {
+  float: left;
+  margin: 15px;
+  font-size: 18px;
+}
+
+#licoes_a_aprender {
+  float: right;
+  margin: 15px;
+  font-size: 18px;
+}
+
+.lado-direito {
+  float: right;
+  margin: 18px;
+}
+
+.lado-esquerdo {
+  float: left;
+  margin: 18px;
+}
+
+* {
+  font-family: Helvetica, sans-serif;
+}
+
+#rodape {
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  background-color: rgb(65, 112, 94);
+  text-align: center;
+  color: rgb(0 , 0 , 0);
+  padding: 8px;
+  font-size: 18px;
+}
+
+th {
+  float: bottom;
+  text-align: center;
+  font-size: 20px;
 }
